# MNIST_Classifier

./: mnist_classifier.py  model.py  pyproject.toml  test_mnist_classifier.py
